bello this is an initial introduction of D    A   N   I   E    L

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1> Hi I'm Daniel</h1>
+    <h2> I am 18</h2>
+    <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope we could be good friends</p>
+    <br> <img src="WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
+    <a href="https://www.instagram.com/dansallllll/">pls dont stalk</a>
 </body>
 </html>
