This is the initial introduction of Darren

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<h1> Darren</h1>
+<h2> 18 years old</h2>
+<p> 
+    I'm from Jakarta, Indonesia and currently I'm studying in XMUM under CS Undergraduate Program.
+    My hobbies are playing table tennis, pickleball and watching movies.
+    <img src="testface.jpg" width="400" length="150" alt="Darren's Face"></img>
+    </p> 
+    <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
+    <input type ="text" placeholder="Type something here">
+
 <body>
     
 </body>
