this an initial intro

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chyu's intro</title>
 </head>
+<style>
+    body {
+        background-color: #f5f5f5;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+</style>
 <body>
-    
+    <h1>Chyu</h1>
+    <h2>18 years old</h2>
+    <p>
+        xiamen university malaysia
+    </p>
+    <p>
+        major in data science. From Hangzhou, China. Loving music and travel.
+    </p>
+    <p>
+        below is my self profile picture
+    </p>
+    <img src="2.jpeg" alt="my picture">
+    <p>
+        If you want to know more about me <a href="https://www.instagram.com/turtle.6376470/">there is the link</a>
+    </p>
+    <a href="https://github.com/cupidryan2-art" class="contact-btn" target="_blank">click here to contact me</a>
 </body>
 </html>
