This is The intial Introduction of idris

--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Idris</title>
 </head>
 <body>
+    <h1>
+        IDRIS 
+    </h1>
+    <h2>
+        22 Years Old
+    </h2>
+    <h3>
+        I'm studying CYBERSECURITY .____. 
+    </h3>
+
+    <p> 
+       I'm Passionate in programming using ai , <br>
+       I try to focus on My daily tasks and I have to avoid distractions .<br>
+       I want to create an organised routine that matches my goals , <br>
+       Practicing Sports is beneficial to our mental and intellectual health .<br>
+    </p>
+    <img src="img.jpg"  alt="" length="300" width="400">
+    <br></br>
+    <a href="https://www.Instagram.com" target="_blank">Instagram </a> 
+   
+
+    <!-- <h2>
+        IDRIS 
+    </h2>
+    <h3>
+        IDRIS 
+    </h3>
+    <h4>
+        IDRIS 
+    </h4>
+    <h5>
+        IDRIS 
+    </h5>
+    <h6>
+        IDRIS 
+    </h6> -->
+    
     
 </body>
 </html>
