--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hosea</title>
 </head>
 <body>
-    
+<h1>
+Hosea
+</h1>
+<p>
+17 years old
+</p>
+<p>
+14 November 2007
+</p>
+<p>
+ Hai, My name is Hosea Revan Aryanto. I am now a student in Xiamen University Malaysia. I take Computer Science major. My hobby is reading a novel and playing game. My favorite food is Bakmi Jawa and my favorite drink is chocolate milk. My favorite colour is blue.   
+</p>
+<img src="ImageHosea.jpeg" alt="">
+<a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#"></a>
 </body>
 </html>
