This is Nurtay's initial introduction

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>nurtay</title>
 </head>
 <body>
-    
+    <h1>Nurtay</h1>
+    <h2>19 years old </h2>
+    <p>Im from Kazakhstan,Almaty. My major is E-commerce</p>
+    <p>My Hobby is F1, different activities and sports</p>
+    <img src="Nurtay.jpg" alt="">
+  <p>
+    If someone intersted this is 
+  <a href="https://www.instagram.com/araben0k/"> My instagram</a>.
+</p>
 </body>
 </html>
