--- a/2index.html
+++ b/2index.html
@@ -8,12 +8,13 @@
 <body>
     <h1>Oomat</h1>
     <h2>17</h2>
-    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind</p>
+    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
+     </p>
     <img src="photo.jpg" alt="lallalaallala"
         width="490"
         height="600">
-    <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my ig
-           </a>
+    <p> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my instagram
+        </a></p>
 
 
 
