--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h2> I am 18</h2>
     <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope we could be good friends</p>
     <br> <img src="WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
-    <a href="https://www.instagram.com/dansallllll/">pls dont stalk</a>
+    <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/">click here</a> </p>
 </body>
 </html>
