i put my instagram link after the image and type a p before the link index.html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvin</title>
+    <title>My bros</title>
 </head>
 <body>
-    <h1>My name is marvin</h1>
-        <h2> i'm 18 years old</h2>
+    <h1>Marvin</h1>
+    <h2>I am 18</h2>
+    <p>this is introduction of my self this is my personal ig</p>
 
-        <p>i like to drink</p>
-        <img src="download.jpg" alt="bros"><br>
-
-        <a href="https://www.youtube.com/watch?v=Zxe99zn5B0U&themeRefresh=1"> This way youtube</a><br>
-        <input type:"text" id="aaa" name="eee"
+    <img src="download.jpg" alt="my cat"><br>
+<p><a href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">This is my instagram</a><br></p>
+    
+    <input type="text" id="eee" name="eee">
 </body>
 </html>
