I add a text "This is my instagram account" within the <p>

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </p> 
 <img src="testface.jpg" width="400" length="150" alt="Darren's Face"></img>
 <p> 
+    This is my instagram account
     <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
 </p>   
 </body>
