i put the link after the image and add my link instagram to it index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>this is introduction of my self this is my personal ig</p>
 
     <img src="download.jpg" alt="my cat"><br>
-<p><a href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">This is my instagram</a><br></p>
+<p>This is link to my instagram <a href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">click here</a><br></p>
     
     <input type="text" id="eee" name="eee">
 </body>
