Added Oomat's code into the main index.html

--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
     <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope we could be good friends</p>
     <br> <img src="WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
     <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/">click here</a> </p>
+    <h1>Oomat</h1>
+    <h2>17</h2>
+    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
+     </p>
+    <img src="photo.jpg" alt="lallalaallala"
+        width="490"
+        height="600">
+    <p> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my instagram
+        </a></p>
+
 </body>
 </html>
