--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oomat</title>
 </head>
 <body>
-    
+    <h1>Oomat</h1>
+    <h2>17</h2>
+    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind</p>
+    <img src="photo.jpg" alt="lallalaallala"
+        width="490"
+        height="600">
+    <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my ig
+           </a>
+
+
+
 </body>
 </html>
