I add more info about me

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Nurtay</h1>
     <h2>19 years old </h2>
-    <p>Im from Kazakhstan,Almaty. My major is E-commerce</p>
-    <p>My Hobby is F1, different activities and sports</p>
+    <p>Im from Kazakhstan,Almaty. My major is E-commerce, Im a progression student from Foundation</p>
+    <p>My Hobby is F1, watching movies, and do different activities</p>
     <img src="Nurtay.jpg" alt="">
   <p>
     If someone intersted this is 
