I put text in the a tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ Hosea
  Hai, My name is Hosea Revan Aryanto. I am now a student in Xiamen University Malaysia. I take Computer Science major. My hobby is reading a novel and playing game. My favorite food is Bakmi Jawa and my favorite drink is chocolate milk. My favorite colour is blue.   
 </p>
 <img src="ImageHosea.jpeg" alt="">
-<a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#"></a>
+<a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
 </body>
 </html>
