I put my link between p tag
Added a paragraph with a link to Instagram.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     </p>
     <img src="img.jpg"  alt="" length="300" width="400">
     <br></br>
+    <p>
+        This is My Instagram 
     <a href="https://www.Instagram.com" target="_blank">Instagram </a> 
+    </p>
    
 
 
