--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Hosea
 <p>
  Hai, My name is Hosea Revan Aryanto. I am now a student in Xiamen University Malaysia. I take Computer Science major. My hobby is reading a novel and playing game. My favorite food is Bakmi Jawa and my favorite drink is chocolate milk. My favorite colour is blue.   
 </p>
-<img src="ImageHosea.jpeg" alt="">
+<img src="images/ImageHosea.jpeg"><br>
 <a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
 
     <h1>Chyu</h1>
