--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     I'm from Jakarta, Indonesia and currently I'm studying in XMUM under CS Undergraduate Program.
     My hobbies are playing table tennis, pickleball and watching movies.
 </p> 
-<img src="testface.jpg" width="400" length="150" alt="Darren's Face"></img>
+<img src="images\testface.jpg" width="400" length="150" alt="Darren's Face"></img>
 <p> 
     This is my instagram account
     <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
