--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <body>
     <h1>Nurtay</h1>
     <h2>19 years old </h2>
-    <p>Im from Kazakhstan,Almaty. My major is E-commerce, Im a progression student from Foundation</p>
+    <p>Im from Kazakhstan,Almaty.Im XNUN student, My major is E-commerce, Im a progression student from Foundation</p>
     <p>My Hobby is F1, watching movies, and do different activities</p>
-    <img src="Nurtay.jpg" alt="">
+    <img src="images/Nurtay.jpg" alt="">
   <p>
     If someone intersted this is 
   <a href="https://www.instagram.com/araben0k/"> My instagram</a>.
