i change the (br) in my code

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Hosea
     <h2>I am 18</h2>
     <p>this is introduction of my self this is my personal ig</p>
 
-    <img src="images/download.jpg" alt="my cat"><br>
+    <img src="images/download.jpg" alt="my cat">
 <p>This is link to my instagram <a href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">click here</a><br></p>
 
     
