change the path of my img.jpg

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        I want to create an organised routine that matches my goals , <br>
        Practicing Sports is beneficial to our mental and intellectual health .<br>
     </p>
-    <img src="img.jpg"  alt="" length="300" width="400">
+    <img src="images/img.jpg"  alt="" length="300" width="400">
     <br></br>
     <p>
         This is My Instagram 
