added an introductio for myself (Zhan)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Cool Guys</title>
 </head>
 <body>
+    <h1>Zhan</h1>
+    <h2>18 yo</h2>
+    <p>I am from Kazakhstan, Almaty. My major is IBU. I like coding and training </p>
+    <img src="images/image.jpg" alt="">
+    <a href="https://www.instagram.com/g.zhann/">My Instagram</a>
     <h1>
         IDRIS 
     </h1>
@@ -30,7 +34,6 @@
     <a href="https://www.Instagram.com" target="_blank">Instagram </a> 
     </p>
 
-<body>
     <h1>Nurtay</h1>
     <h2>19 years old </h2>
     <p>Im from Kazakhstan,Almaty. My major is E-commerce, Im a progression student from Foundation</p>
