i've do the change that you gave(class name; font size; move style)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         img {
             width: 300px;
         }
+        .profile > h1 {
+            font-size: 40px;
+            color: purple;
+        }
     </style>
 </head>
 
@@ -68,7 +72,7 @@
     </p>
     <img src="images/ImageHosea.jpeg" alt="">
     <a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
-    <div class="Chyu's profile">
+    <div class="chyu profile">
         <h1>Chyu</h1>
         <h2>18 years old</h2>
         <p>
@@ -83,10 +87,9 @@
         <img src="/images/2.jpeg" alt="my picture">
         <p>
             If you want to know more about me <a href="https://www.instagram.com/turtle.6376470/"
-                style="color: rgb(0, 133, 249); text-decoration: none; background-color: aqua;">there is the link</a>
+                style="color: rgb(0, 133, 249); text-decoration: none; background-color: rgb(137, 255, 255);">there is the link</a>
         </p>
-        <a href="https://github.com/cupidryan2-art" class="contact-btn" target="_blank"
-            style="color: black; text-decoration: none;background-color: rgb(145, 52, 52);">click here to contact me</a>
+        <a href="https://github.com/cupidryan2-art" class="contact-btn" target="_blank">click here to contact me</a>
 
     </div>
 
