--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             width: 300px;
 
         }
+
+        .hosea_intro_con h1 {
+            color: blue;
+            font-size: 80px;
+            font-weight: 900;
+
+        }
     </style>
 </head>
 
@@ -53,9 +60,9 @@
         <a href="https://www.instagram.com/araben0k/"> My instagram</a>.
     </p>
 
-    <div class="Hosea_intro_con">
-        <div class="Hosea_age">
-            <h1 style="color: blue; font-weight: 900; font-size:80px;";;>
+    <div class="hosea_intro_con">
+        <div class="hosea_age">
+            <h1>
                 Hosea
             </h1>
             <p>
@@ -72,10 +79,11 @@
             chocolate milk. My favorite colour is blue.
         </p>
         <img src="images/ImageHosea.jpeg" alt=""><br>
-      <div class="Hosea_link">
-       <a style="color: brown; text-decoration: none;" ; ref="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
-          
-      </div>
+
+            <a class="hosea_link" style="color: rgb(255, 0, 0); text-decoration: none;" ;
+                ref="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram
+                account</a>
+
     </div>
 
     <h1>Chyu</h1>
