--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <style> 
     img{width: 300px;} 
-    h1{
+    .bello h1{
     color: brown;
     font-size: 50px;
     font-weight: 500;
