I edit the font weight and change my link background color in style.css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Guys</title>
-    <style> 
-    .darren_intro_con h1 {
-    color:rgb(71, 6, 151);font-size:50px;font-weight:5px;
-    }
-    img {
-        width:300px;
-    }
+    <style>
+        .darren_intro_con h1 {
+            color: rgb(71, 6, 151);
+            font-size: 50px;
+            font-weight: 600;
+        }
+
+        img {
+            width: 300px;
+        }
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -99,7 +102,7 @@
 
 
     <input type="text" id="eee" name="eee">
-    <div class="darren_intro_con">  
+    <div class="darren_intro_con">
         <h1>Darren</h1>
         <h2> 18 years old</h2>
         <p>
@@ -109,7 +112,8 @@
         <img src="images/testface.jpg" width="400" length="150" alt="Darren's Face"></img>
         <p>
             This is my instagram account
-            <a style="text-decoration: none; color:azure;background-color: rgb(134, 38, 224);" href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
+            <a style="text-decoration: none; color:azure;"
+                href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
         </p>
     </div>
     <h1> Hi I'm Daniel</h1>
