Made an improvement on the h1 style

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Guys</title>
     <link rel="stylesheet" href="style.css">
-    <style> 
-    img{width: 300px;} 
-    .bello h1{
-    color: brown;
-    font-size: 50px;
-    font-weight: 500;
-    }
-    </style>
+    <style>
+        img {
+        width: 300px;
+        }
+    </style> 
 </head>
 
 <body>
@@ -111,12 +108,13 @@
         <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
     </p>
     <div class="bello">
-        <h1> Hi I'm Daniel</h1>
+        <h1 style="color: brown;font-size: 50px;font-weight: 500;"> Hi I'm Daniel </h1>
         <h2> I am 18</h2>
         <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope
             we could be good friends</p>
         <br> <img src="images/WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
-        <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/" style="color:aliceblue;text-decoration: none;">click here</a> </p>
+        <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/"
+                style="color:aliceblue;text-decoration: none;">click here</a> </p>
     </div>
     <h1>Oomat</h1>
     <h2>17</h2>
