Changes a bit my code

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Guys</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         img {
             width: 300px;
+        }
+
+        .nurtay_project h1 {
+            color: blueviolet;
+            font-size: 50px;
         }
     </style>
 
@@ -44,8 +50,8 @@
 
 
     </p>
-    <div class="Nurtay_project">
-        <h1 style="color: blueviolet; font-size: 50px; "> Nurtay</h1>
+    <div class="nurtay_project">
+        <h1> Nurtay</h1>
         <h2>19 years old </h2>
         <p>Im from Kazakhstan,Almaty.Im XMUM student, My major is E-commerce, Im a progression student from Foundation
         </p>
@@ -53,8 +59,8 @@
         <img src="images/Nurtay.jpg" alt="">
         <p>
             If someone intersted this is
-            <a href="https://www.instagram.com/araben0k/"> My instagram</a>.
-            <a href="#" style="text-decoration: aqua;"></a>
+            <a href="https://www.instagram.com/araben0k/" style= 'text-decoration: none; color: brown;'>   My instagram</a>.
+            <a href="#" style="text-decoration: none; color:brown;"></a>
     </div>
     <h1>
         Hosea
