--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        img {
+            width: 300px;
+        }
+        #Myh1{
+            color: rgb(255, 0, 0);
+            font-size: xx-large;
+            font-weight: 700;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Guys</title>
@@ -101,15 +111,19 @@ Hosea
     <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope we could be good friends</p>
     <br> <img src="images/WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
     <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/">click here</a> </p>
-    <h1>Oomat</h1>
-    <h2>17</h2>
-    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
-     </p>
-    <img src="images/photo.jpg" alt="lallalaallala"
-        width="490"
-        height="600">
-    <p> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my instagram
+
+    <link rel="stylesheet" href="style.css">
+    <div class="OomatsIntro">
+        <h1 id="Myh1">Oomat</h1>
+        <h2>17</h2>
+        <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
+        </p>
+        <img src="images/photo.jpg" alt="lallalaallala"
+            width="490"
+            height="600">
+        <p id="Mya"> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu" style="color: yellow; text-decoration: none;">my instagram
         </a></p>
+    </div>
 
 </body>
 </html>
