--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         img {
             width: 300px;
         }
-        #Myh1{
+        .OomatsIntro h1{
             color: rgb(255, 0, 0);
-            font-size: xx-large;
-            font-weight: 700;
+            font-size: 50px;
+            font-weight: 100;
         }
     </style>
     <meta charset="UTF-8">
@@ -114,14 +114,14 @@ Hosea
 
     <link rel="stylesheet" href="style.css">
     <div class="OomatsIntro">
-        <h1 id="Myh1">Oomat</h1>
+        <h1>Oomat</h1>
         <h2>17</h2>
         <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
         </p>
         <img src="images/photo.jpg" alt="lallalaallala"
             width="490"
             height="600">
-        <p id="Mya"> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu" style="color: yellow; text-decoration: none;">my instagram
+        <p> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu" style="color: yellow; text-decoration: none;">my instagram
         </a></p>
     </div>
 
