changed my class name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         img {
             width: 300px;
         }
-        .OomatsIntro h1{
+        .oomats_intro h1{
             color: rgb(255, 0, 0);
             font-size: 50px;
             font-weight: 100;
@@ -113,7 +113,7 @@ Hosea
     <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/">click here</a> </p>
 
     <link rel="stylesheet" href="style.css">
-    <div class="OomatsIntro">
+    <div class="oomats_intro">
         <h1>Oomat</h1>
         <h2>17</h2>
         <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
