i change the css type code and change all the capital letter into small

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </p>
         <a href="https://github.com/cupidryan2-art" class="contact-btn" target="_blank">click here to contact me</a>
 
-        <div class="Intro_Marvin_con">
-            <div class="Name_age_con">
+        <div class="intro_marvin_con">
+            <div class="name_age_con">
                 <h1>Marvin</h1>
                 <h2>I am 18</h2>
 
