--- a/index.html
+++ b/index.html
@@ -1,37 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Cool Guys</title>
+
+    <style>
+        img {
+            width: 300px;
+        }
+
+        .zhan_intro_con h1 {
+            color: brown;
+            font-size: 16px;
+            font-weight: 900;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Zhan</h1>
-    <h2>18 yo</h2>
-    <p>I am from Kazakhstan, Almaty. My major is IBU. I like coding and training </p>
-    <img src="images/image.jpg" alt="">
-    <a href="https://www.instagram.com/g.zhann/">My Instagram</a>
+    <div id="zhanCon" class="zhan_intro_con yo">
+        <div class="zhan_name_age">
+            <h1 id="heading">Zhan</h1>
+            <h1>Matylek</h1>
+            <h2 id="myAge" class="my_age_class">18 yo</h2>
+        </div>
+
+        <p>I am from Kazakhstan, Almaty. My major is IBU. I like coding and training </p>
+
+        <h3>My Hobbies</h3>
+
+        <ul id="hobbiesList">
+
+        </ul>
+
+        <img src="images/image.jpg" alt="" class="my_image">
+        <a href="https://www.instagram.com/g.zhann/">My Instagram</a>
+        <br>
+        <button id="bgConColor">Container width Change</button>
+        <button id="headingSize">Heading Size Change</button>
+    </div>
+
     <h1>
-        IDRIS 
+        IDRIS
     </h1>
     <h2>
         22 Years Old
     </h2>
     <h3>
-        I'm studying CYBERSECURITY .____. 
+        I'm studying CYBERSECURITY .____.
     </h3>
 
-    <p> 
-       I'm Passionate in programming using ai , <br>
-       I try to focus on My daily tasks and I have to avoid distractions .<br>
-       I want to create an organised routine that matches my goals , <br>
-       Practicing Sports is beneficial to our mental and intellectual health .<br>
+    <p>
+        I'm Passionate in programming using ai , <br>
+        I try to focus on My daily tasks and I have to avoid distractions .<br>
+        I want to create an organised routine that matches my goals , <br>
+        Practicing Sports is beneficial to our mental and intellectual health .<br>
     </p>
-    <img src="images/img.jpg"  alt="" length="300" width="400">
+
+
+
+    <img src="images/img.jpg" alt="" length="300" width="400">
     <br></br>
     <p>
-        This is My Instagram 
-    <a href="https://www.Instagram.com" target="_blank">Instagram </a> 
+        This is My Instagram
+        <a href="https://www.Instagram.com" target="_blank">Instagram </a>
     </p>
 
     <h1>Nurtay</h1>
@@ -39,25 +74,27 @@
     <p>Im from Kazakhstan,Almaty. My major is E-commerce, Im a progression student from Foundation</p>
     <p>My Hobby is F1, watching movies, and do different activities</p>
     <img src="images/Nurtay.jpg" alt="">
-  <p>
-    If someone intersted this is 
-  <a href="https://www.instagram.com/araben0k/"> My instagram</a>.
-</p>
+    <p>
+        If someone intersted this is
+        <a href="https://www.instagram.com/araben0k/"> My instagram</a>.
+    </p>
 
-<h1>
-Hosea
-</h1>
-<p>
-17 years old
-</p>
-<p>
-14 November 2007
-</p>
-<p>
- Hai, My name is Hosea Revan Aryanto. I am now a student in Xiamen University Malaysia. I take Computer Science major. My hobby is reading a novel and playing game. My favorite food is Bakmi Jawa and my favorite drink is chocolate milk. My favorite colour is blue.   
-</p>
-<img src="images/ImageHosea.jpeg" alt="">
-<a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
+    <h1>
+        Hosea
+    </h1>
+    <p>
+        17 years old
+    </p>
+    <p>
+        14 November 2007
+    </p>
+    <p>
+        Hai, My name is Hosea Revan Aryanto. I am now a student in Xiamen University Malaysia. I take Computer Science
+        major. My hobby is reading a novel and playing game. My favorite food is Bakmi Jawa and my favorite drink is
+        chocolate milk. My favorite colour is blue.
+    </p>
+    <img src="images/ImageHosea.jpeg" alt="">
+    <a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
 
     <h1>Chyu</h1>
     <h2>18 years old</h2>
@@ -81,35 +118,43 @@ Hosea
     <p>this is introduction of my self this is my personal ig</p>
 
     <img src="images/download.jpg" alt="my cat">
-<p>This is link to my instagram <a href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">click here</a><br></p>
+    <p>This is link to my instagram <a href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">click
+            here</a><br></p>
 
-    
+
     <input type="text" id="eee" name="eee">
-<h1> Darren</h1>
-<h2> 18 years old</h2>
-<p> 
-    I'm from Jakarta, Indonesia and currently I'm studying in XMUM under CS Undergraduate Program.
-    My hobbies are playing table tennis, pickleball and watching movies.
-</p> 
-<img src="images/testface.jpg" width="400" length="150" alt="Darren's Face"></img>
-<p> 
-    This is my instagram account
-    <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
-</p>   
+    <h1> Darren</h1>
+    <h2> 18 years old</h2>
+    <p>
+        I'm from Jakarta, Indonesia and currently I'm studying in XMUM under CS Undergraduate Program.
+        My hobbies are playing table tennis, pickleball and watching movies.
+    </p>
+    <img src="images/testface.jpg" width="400" length="150" alt="Darren's Face"></img>
+    <p>
+        This is my instagram account
+        <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
+    </p>
     <h1> Hi I'm Daniel</h1>
     <h2> I am 18</h2>
-    <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope we could be good friends</p>
+    <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope we
+        could be good friends</p>
     <br> <img src="images/WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
     <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/">click here</a> </p>
     <h1>Oomat</h1>
     <h2>17</h2>
-    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
-     </p>
-    <img src="images/photo.jpg" alt="lallalaallala"
-        width="490"
-        height="600">
-    <p> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my instagram
+    <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to
+        do sports, dorsnt matter what kind.
+    </p>
+    <img src="images/photo.jpg" alt="lallalaallala" width="490" height="600">
+    <p> This is my instagram <a
+            href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my
+            instagram
         </a></p>
 
+    <script src="index.js">
+
+    </script>
+    <script src="index.js"></script>
 </body>
+
 </html>
