--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Guys</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="chyu-style.css">
     <style>
         img {
             width: 300px;
@@ -72,9 +72,13 @@
     </p>
     <img src="images/ImageHosea.jpeg" alt="">
     <a href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram account</a>
-    <div class="chyu profile">
-        <h1>Chyu</h1>
-        <h2>18 years old</h2>
+    <div id="chyuCon" class="chyu profile">
+        <h1 id="chyuName">Chyu</h1>
+        <h2 id="chyuAge">18 years old</h2>
+        <h3>my hobbies</h3>
+        <ul id="chyuhobbylist">
+            
+        </ul>
         <p>
             xiamen university malaysia
         </p>
@@ -90,7 +94,9 @@
                 style="color: rgb(0, 133, 249); text-decoration: none; background-color: rgb(137, 255, 255);">there is the link</a>
         </p>
         <a href="https://github.com/cupidryan2-art" class="contact-btn" target="_blank">click here to contact me</a>
-
+        <br>
+        <button id="qconbgwidth">background width change</button>
+        <button id="qconsize">heading size change</button>
     </div>
 
     <h1>Marvin</h1>
@@ -131,6 +137,9 @@
             instagram
         </a></p>
 
+        <script src="chyu.js">
+
+        </script>
 </body>
 
 </html>
