--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="Hosea_style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -75,15 +75,23 @@
         <p>
             Hai, My name is Hosea Revan Aryanto. I am now a student in Xiamen University Malaysia. I take Computer
             Science
-            major. My hobby is reading a novel and playing game. My favorite food is Bakmi Jawa and my favorite drink is
+            major. My favorite food is Bakmi Jawa and my favorite drink is
             chocolate milk. My favorite colour is blue.
         </p>
+        <h2>
+            My Hobbies
+        </h2>
+        <ul id="hobbyListHosea">
+
+        </ul>
         <img src="images/ImageHosea.jpeg" alt=""><br>
 
             <a class="hosea_link" style="color: rgb(255, 0, 0); text-decoration: none;" ;
-                ref="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram
-                account</a>
-
+                href="https://www.instagram.com/hovanto.23/?igsh=MWZlaW9tbXR6NHJnag%3D%3D#">This is my Instagram
+                account</a> <br>
+<button id="bgChaHosea">Change Background Colour</button>
+<button id="bgWidHosea">Change Container Size</button>
+<button id="fontSizeChaHosea">Change Font Size</button>
     </div>
 
     <h1>Chyu</h1>
@@ -137,10 +145,12 @@
     </p>
     <img src="images/photo.jpg" alt="lallalaallala" width="490" height="600">
     <p> This is my instagram <a
-            href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my
+            ref="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my
             instagram
         </a></p>
+<script src="Hosea.js">
 
+</script>
 </body>
 
 </html>
