I add a button to change my background color and add my name to all of my container id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .darren_intro_con h1 {
             color: rgb(71, 6, 151);
-            font-size: 50px;
+            font-size: 35px;
             font-weight: 600;
         }
 
@@ -17,6 +17,7 @@
         }
     </style>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -102,19 +103,26 @@
 
 
     <input type="text" id="eee" name="eee">
-    <div class="darren_intro_con">
-        <h1>Darren</h1>
+    <div class="darren_intro_con" id ="darren_div">
+        <h1 id ="darren_h1">Darren</h1>
         <h2> 18 years old</h2>
         <p>
             I'm from Jakarta, Indonesia and currently I'm studying in XMUM under CS Undergraduate Program.
             My hobbies are playing table tennis, pickleball and watching movies.
         </p>
+        <h3>My Hobbies</h3>
+            <ul id="darren_myhobbies">
+            
+            </ul>
         <img src="images/testface.jpg" width="400" length="150" alt="Darren's Face"></img>
         <p>
             This is my instagram account
             <a style="text-decoration: none; color:azure;"
                 href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
         </p>
+        <button id="darren_changeWidthBtn">Change Width Size</button>
+        <button id="darren_changeHeadingSizeBtn">Change Heading Size</button>
+        <button id="darren_changeBgColor">Change Background Color</button>
     </div>
     <h1> Hi I'm Daniel</h1>
     <h2> I am 18</h2>
@@ -132,7 +140,7 @@
             href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my
             instagram
         </a></p>
-
+<script src="script.js"></script>
 </body>
 
 </html>
