completed my h/w, added bg-color change button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
         img {
             width: 300px;
+            height: 400px;
         }
         .oomats_intro h1{
             color: rgb(255, 0, 0);
@@ -114,16 +115,24 @@ Hosea
 
     <link rel="stylesheet" href="style.css">
     <div class="oomats_intro">
-        <h1>Oomat</h1>
-        <h2>17</h2>
+        <h1 id="oomatsHeading">Oomat</h1>
+        <h2>17yo</h2>
         <p>My name is Oomat Shakiraliev, i came from Kyrgyzstan to Malaysia to study at foundation programm in IT. I like to do sports, dorsnt matter what kind.
         </p>
+        <h3>My hobbies</h3>
+        <ul id="oomatsHobby">
+
+        </ul>
         <img src="images/photo.jpg" alt="lallalaallala"
-            width="490"
-            height="600">
+        width="490"
+        height="600">
         <p> This is my instagram <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu" style="color: yellow; text-decoration: none;">my instagram
         </a></p>
+        <button type="button" id="oomatsChangeHeadingtn">Heading Size</button>
+        <button type="button" id="oomatsChangeBgBtng"> Bg size </button>
+        <button type="button" id="oomatsChangeBgColor">Bg color</button>
     </div>
-
+    
+    <script src="script.js"> </script>
 </body>
 </html>
