Changed the name of ids and classes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <style>
         img {
-        width: 300px;
+            width: 300px;
         }
-    </style> 
+    </style>
 </head>
 
 <body>
@@ -107,14 +107,22 @@
         This is my instagram account
         <a href="https://www.instagram.com/darr_su07?igsh=MXFmZjNneTNxNXJwdA%3D%3D&utm_source=qr">Click here!!!</a>
     </p>
-    <div class="bello">
+    <div class="danielbello">
         <h1 style="color: brown;font-size: 50px;font-weight: 500;"> Hi I'm Daniel </h1>
         <h2> I am 18</h2>
+        <h3> My hobbies are:</h3>
+        <ul id="danielhobbies">
+        </ul>
         <p>I am Indonesian and I don't have much to say about myself. I used to look like this but not anymore ig. Hope
             we could be good friends</p>
         <br> <img src="images/WIN_20221020_09_35_55_Pro.jpg" alt="my picture"></img.src><br>
         <p>This is my instagram: <a href="https://www.instagram.com/dansallllll/"
                 style="color:aliceblue;text-decoration: none;">click here</a> </p>
+        <br>
+        <button id="danielbackcolor" type="button">Change background color</button>
+        <button id="danielheadsize" type="button">Change heading size</button>
+        <button id="danielheadcolor" type="button">Change heading color</button>
+        <button id="danielwidthsize" type="button">Change container width</button>
     </div>
     <h1>Oomat</h1>
     <h2>17</h2>
@@ -126,7 +134,7 @@
             href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=qb2u2wu">my
             instagram
         </a></p>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
