i change all the class id to my name as well

--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
         </p>
         <a href="https://github.com/cupidryan2-art" class="contact-btn" target="_blank">click here to contact me</a>
 
-        <div class="intro_marvin_con">
-            <div class="name_age_con">
-                <h1>Marvin</h1>
+        <div  class="intro_marvin_con" id="marvinChan">
+            <div class="marvin_age_con">
+                
+                <h1 id="marvin_heading">Marvin</h1>
                 <h2>I am 18</h2>
 
             </div>
@@ -96,6 +97,9 @@
                 <a style="text-decoration: none; color: red; background-color:black"
                     href="https://www.instagram.com/reel/DNH_YTATxR2/?igsh=cDBtYnd4eDg5dnYw">click here</a><br>
             </p>
+            <button class="marvin_bgWidth">Change width</button>
+            <button class="marvin_fontBtn">Change Heading Size</button>
+
 
 
             <input type="text" id="eee" name="eee">
@@ -128,6 +132,13 @@
                 instagram
             </a></p>
 
+<script src="index.js">
+
+
+</script>
+
+
     </body>
+
 
 </html>
